fix: collapse 箭头位置

--- a/packages/ui/collapse/src/index.less
+++ b/packages/ui/collapse/src/index.less
@@ -3,6 +3,12 @@
 .@{osui-collapse-class-prefix} {
     &.ant-collapse > .ant-collapse-item > .ant-collapse-header .ant-collapse-arrow {
         top: var(--collapse-arrow-top);
+
+        svg {
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
     }
 
     .@{ant-prefix}-collapse-item {
